[gd_scene load_steps=2 format=2]

[ext_resource path="res://SelectionScreen.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 221.0
margin_top = 154.0
margin_right = 261.0
margin_bottom = 168.0
text = "Ssellcet a playre"

[node name="Button" type="Button" parent="."]
margin_left = 211.0
margin_top = 332.0
margin_right = 223.0
margin_bottom = 352.0
text = "Load Map one"

[node name="Button2" type="Button" parent="."]
margin_left = 248.0
margin_top = 212.0
margin_right = 260.0
margin_bottom = 232.0
text = "Player Uno"

[node name="Button3" type="Button" parent="."]
margin_left = 477.0
margin_top = 229.0
margin_right = 557.0
margin_bottom = 249.0
text = "Player Dos"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
